welcome.lessons.welcome.array.array123.Array123.scala.error
array123:25: error: type mismatch;
 found   : Unit
 required: Boolean
  if (nums(n-1) == 3 && nums(n-2) == 2 && nums(n-3) == 1) {
  ^