welcome.lessons.welcome.array.array123.Array123.scala.code
def array123(nums:Array[Int]): Boolean = {
  verifi123fin(nums)
    for ( i <- 0 to nums.length -1) {
    if (nums(i) == 1) {
      if (nums.length < i+3) {
        return false
      }
      else {
        if (nums(i+1) == 2) {
          if (nums(i+2) == 3) {
            return true
          }
        }
      }
    }
    else {
      return false
    }
  }
  return false
  }

def verifi123fin(nums:Array[Int]): Boolean =  {
  val n = nums.length
  if (nums(n-1) == 3 && nums(n-2) == 2 && nums(n-3) == 1) {
    return true
  }
}
  

  